# AgriVision

./: .gitignore  README.md
AI/Crop-Recommednation-ML-Model/: Dockerfile  README.md  setup.py
AI/Crop-Recommednation-ML-Model/apps/: api.py  web_app.py
AI/Crop-Recommednation-ML-Model/artifacts/: data.csv  json_data.txt  label_encoder.pkl  model.pkl  preprocessor.pkl  test.csv  train.csv
AI/Crop-Recommednation-ML-Model/docs/: api_url.txt
AI/Crop-Recommednation-ML-Model/notebooks/: EDA.ipynb  model_training.ipynb
AI/Crop-Recommednation-ML-Model/scripts/: test_model.py
AI/Crop-Recommednation-ML-Model/src/: logger.py  utils.py  validate_data.py
AI/FarmInsects-Detection-CV-Model/: .dockerignore  Deploy_CV_models_on_PI.txt  README.md  app.py  requirements.txt
AI/FarmInsects-Detection-CV-Model/deploy/: app.py  (+1 more)
AI/Fertilizer-Recommednation-ML-Model/: Dockerfile  README.md  requirements.txt  setup.py
AI/Irrigation-Recommendation-ML-Model/: .dockerignore  DockerFile  EC2-Irrigation.pem  README.md  requirements.txt
AI/PlantDiseases-Detection-CV-Model/: Dockerfile  README.md  app.py
AI/PlantGrowthStage-CV-Model/: .gitignore  app.py  requirements.txt
BackEnd/: BackEnd.sln  Dockerfile  README.md  fly.toml
BackEnd/.tmp_build_api/: AgriVision.API.deps.json  AgriVision.API.staticwebassets.runtime.json  AgriVision.Application.deps.json  AgriVision.Domain.deps.json  AgriVision.Infrastructure.deps.json  appsettings.json
BackEnd/AgriVision.API/: AgriVision.API.csproj  AgriVision.API.http  Program.cs  WeatherForecast.cs  appsettings.json
BackEnd/AgriVision.Application/: AgriVision.Application.csproj  Class1.cs
BackEnd/AgriVision.Domain/: Class1.cs
BackEnd/AgriVision.Infrastructure/: AgriVision.Infrastructure.csproj  Class1.cs
BackEnd/AgriVision.Tests/: AgriVision.Tests.csproj  UnitTest1.cs
Embedded/AgriVision_Gateway_Device/: README.md  platformio.ini
Embedded/AgriVision_Sensor_Device/: CMakeLists.txt  README.md  main_nrf24_rx_backup.txt
Embedded/AgriVision_Sensor_Device/APP/: FreeRTOS.h  app.h  app_protocol.h  freertos_task.c  main.c  syscalls.c  task.h
Embedded/AgriVision_Sensor_Device/HAL/KEYPAD/: HAL_KEYPAD.c  HAL_KEYPAD.h
Embedded/AgriVision_Sensor_Device/HAL/LCD/: HAL_LCD.c  HAL_LCD.h
Embedded/AgriVision_Sensor_Device/HAL/LED/: HAL_LED.c  HAL_LED.h
Embedded/AgriVision_Sensor_Device/HAL/NPK_SENSOR/: HAL_NPK_SENSOR.c  HAL_NPK_SENSOR.h
Embedded/AgriVision_Sensor_Device/HAL/NRF24L01/: HAL_NRF24L01.c  HAL_NRF24L01.h
Embedded/AgriVision_Sensor_Device/HAL/ST7735S/: HAL_ST7735S.c  HAL_ST7735S.h
Embedded/AgriVision_Sensor_Device/MCAL/Core/: startup_stm32f401xx.S  system_stm32f4xx.c  system_stm32f4xx.h
Embedded/AgriVision_Sensor_Device/MCAL/GPIO/: MCAL_GPIO.c  MCAL_GPIO.h
Embedded/AgriVision_Sensor_Device/MCAL/INTERRUPT/: MCAL_INTERRUPT.c  MCAL_INTERRUPT.h
Embedded/AgriVision_Sensor_Device/MCAL/LIBS/: PLATFORM_TYPES.h  STM32F401RC.h  UTILS.h
Embedded/AgriVision_Sensor_Device/MCAL/RCC/: MCAL_RCC.c  MCAL_RCC.h
Embedded/AgriVision_Sensor_Device/MCAL/SPI/: MCAL_SPI.c  MCAL_SPI.h
Embedded/AgriVision_Sensor_Device/MCAL/USART/: MCAL_USART.c  MCAL_USART.h
Embedded/Agrivision_RaspberryPI/: config.py  main.py  requirements.txt
FrontEnd/: README.md  angular.json  package-lock.json  package.json
FrontEnd/src/: index.html  styles.css
(+309 files in other folders)
